2013/10/14  Andreas Drollinger  <droll>

   * TEPAM version 0.5.0
      tepam::procedure command
       - New procedure attributes: -validatecommand_error_text, -validatecommand
       - Updated argument attribute: -validatecommand (the command is now 
         executed in the context of the procedure body which allows accessing 
         argument variables)
       - New argument attribute: -validatecommand_error_text
       - Minor bug fix: The TEPAM internal procedure list was incorrect if a 
         procedure was defined multiple times.
       - Procedure help generation: Indicate if an argument can be used multiple 
         times
      argument_dialogbox
       - New global attributes: -validatecommand_error_text, -validatecommand
       - New argument attributes: -validatecommand_error_text, -validatecommand,
                      -validatecommand_error_text2, -validatecommand2
   * TEPAM Doc Gen version 0.1.0
     - This is the first version of the tepam::doc_gen package.
   * New files:
     - tepam_doc_gen.tcl (new tepam::doc gen package)
     - tepam_doc_gen.man (documentation for tepam::doc_gen)
     - doc_gen.test (limited regression test for tepam::doc_gen)
     - 1d_procedure_validation.demo (tests the new -validatecommandX arguments)
     - 3_doc_gen_generation.demo (new demo for the tepam::doc_gen package)
     - tepam_doc_stylesheet.css (default HTML stylesheet used by tepam::doc_gen)
   * Updated files:
     - tepam.tcl (see above)
     - bug_fixes.test (added dedicated test for Bug 3608952)
     - pkgIndex.tcl (added the tepam::doc_gen package)
     - proc_call_arg_valid.test.test (made adaptations for the new error message related to the -validatecommand attribute)
     - tepam_argument_dialogbox.man (document the new -validatecommandX attributes)
     - tepam_procedure.man (document the new -validatecommandX attributes)
     - 1_procedure_introduction.demo (add a demo for tepam::doc_gen::generate)